<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Vremea</string>

    <string name="action_refresh" translatable="false">Împrospătează</string>
    <string name="action_settings" translatable="false">Mofturi</string>
    <string name="action_map" translatable="false">Harta</string>
    <string name="database" translatable="false">Database</string>

    <string name="pref_units_label" translatable="false">Cum să măsoară</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_default" translatable="false">metric</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_units_label_metric" translatable="false">Celsius</string>
    <string name="pref_units_label_imperial" translatable="false">Farănhait</string>

    <string name="pref_cities_label" translatable="false">Locatie</string>
    <string name="pref_cities_key" translatable="false">city</string>
    <string name="pref_cities_label_default" translatable="false">Cluj-Napoca</string>
    <string name="pref_cities_label_cluj" translatable="false">Cluj-Napoca</string>
    <string name="pref_cities_label_zlatna" translatable="false">Zlatna</string>
    <string name="pref_cities_label_alba" translatable="false">Alba-Iulia</string>
    <string name="pref_cities_label_cimislia" translatable="false">Cimislia</string>
    <string name="pref_cities_label_satu_mare" translatable="false">Satu Mare</string>
    <string name="pref_cities_label_baia_mare" translatable="false">Baia Mare</string>
    <string name="pref_cities_label_tashkent" translatable="false">Tahkent</string>
    <string name="pref_cities_default" translatable="false">681290</string>
    <string name="pref_cities_cluj" translatable="false">681290</string>
    <string name="pref_cities_zlatna" translatable="false">662161</string>
    <string name="pref_cities_alba" translatable="false">686578</string>
    <string name="pref_cities_cimislia" translatable="false">618406</string>
    <string name="pref_cities_satu_mare" translatable="false">667873</string>
    <string name="pref_cities_baia_mare" translatable="false">685826</string>
    <string name="pref_cities_tashkent" translatable="false">1512569</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
</resources>
