<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="checkbox_preference"
        android:title="@string/title_checkbox_preference"
        android:summary="@string/summary_checkbox_preference" />

    <ListPreference
        android:title="@string/pref_units_label"
        android:summary="%s"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values" />

    <ListPreference
        android:title="@string/pref_cities_label"
        android:summary="%s"
        android:key="@string/pref_cities_key"
        android:defaultValue="@string/pref_cities_default"
        android:entries="@array/pref_cities_options"
        android:entryValues="@array/pref_cities_values" />

</PreferenceScreen>